<resources>
    <string name="app_name">Meeto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="album_name">CameraSample</string>
    <string name="gcm_sender_id">657281407701</string>
    <string name="gcm_server_key">AIzaSyB_827eAVBdFwsgWoOrlD7rCW4LoMwf-Pg</string>
    <string name="facebook_app_id">236568240079026</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="skip">SKIP</string>
    <string name="fb_msg">You have cancelled login via FB</string>
    <string name="setlang">Set Language</string>
    <string name="setlang_hint">Please Select Prefer Language you want</string>
    <string name="email_hint">Email Id</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email_error">Please enter your Email Id</string>
    <string name="email_error_2">Enter valid Email Id</string>
    <string name="password_error">Please Enter Password</string>
    <string name="forgot_email">Email Id</string>
    <string name="forgot_btn">SEND</string>
    <string name="Login_msg">Please Login to your account!</string>
    <string name="rg_fname_hint">First Name</string>
    <string name="rg_lname_hint">Last Name</string>
    <string name="rg_email_hint">Email id</string>
    <string name="rg_password_hint">Password</string>
    <string name="rg_conf_p_hint">Confirm Password</string>
    <string name="rg_btn">REGISTRATION</string>
    <string name="rg_already">Already a members? Login</string>
    <string name="rg_fisrterror">User firstname cant be empty</string>
    <string name="rg_lasterror">User lastname cant be empty</string>
    <string name="rg_emailerror">Email cant be empty</string>
    <string name="rg_passworderror">Password cant be empty</string>
    <string name="rg_passworderror_2">Password should be minimum of 8 characters.</string>
    <string name="rg_confpassworderror">Password does not match.</string>
    <string name="rg_emailvalid">Please Enter Valid Email Address.</string>
    <string name="rg_reqmsg">Please wait while we register you.</string>
    <string name="home_searchs">Search your seminar</string>
    <string name="home_banner_name1">Find Your New Seminar</string>
    <string name="home_banner_name2">Pick a seminar to learn anything, anytime</string>
    <string name="home_city">Select</string>
    <string name="home_msg">Welcome to Meeto</string>
    <string name="home_msg_2">work according your need</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_yourlisting">My Listing</string>
    <string name="drawer_yourBooking">My Booking</string>
    <string name="drawer_wishlist">Wishlist</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_review">Reviews</string>
    <string name="drawer_share">Share</string>
    <string name="seminar_list_name">Seminar List</string>
    <string name="filter_toolbar">Search Preference</string>
    <string name="filter_date">DATE</string>
    <string name="filter_To">TO</string>
    <string name="filter_seminar_attendees">SEMINAR ATTENDEES</string>
    <string name="filter_seminar_place">SEMINAR PLACE</string>
    <string name="filter_industry">INDUSTRY</string>
    <string name="filter_find">FIND SEMINAR</string>
    <string name="Business_category">Business Category</string>
    <string name="Welcome_Foreign_student">Foreign Students</string>
    <string name="inexperienced_person">Inexperienced Person</string>
    <string name="New_graduate">New Graduate</string>
    <string name="mid_career_recruiting">Mid-Career Recruiting</string>
    <string name="private_office">Private Office</string>
    <string name="Public_Place">Public Place</string>
    <string name="Service">Service</string>
    <string name="Menufacturing">manufacturing</string>
    <string name="Trade">Trade</string>
    <string name="Finance_Business">Finance Business</string>
    <string name="Building">Building</string>
    <string name="Real_estate">Real estate</string>
    <string name="IT">IT</string>
    <string name="Education">Education</string>
    <string name="Food">Food</string>
    <string name="Publishing">Publishing</string>
    <string name="Agricultural">Agricultural Industry</string>
    <string name="Timber">Timber</string>
    <string name="Fishing">Fishing</string>
    <string name="Marin_Product">Marin Product</string>
    <string name="Stock_Farming">Stock Farming</string>
    <string name="Medical">Medical</string>
    <string name="profile_toolbar">Personal Profile</string>
    <string name="profile_Logout">Logout</string>
    <string name="profile_chanegimage">Change Image</string>
    <string name="profile_personal_information">Personal Information</string>
    <string name="profile_First_Name">First Name</string>
    <string name="profile_hint_First_Name">User first name</string>
    <string name="profile_Last_Name">Last Name</string>
    <string name="profile_hint_Last_Name">User last name</string>
    <string name="profile_Gender">Gender</string>
    <string name="profile_Gender_Male">Male</string>
    <string name="profile_Gender_Female">Female</string>
    <string name="profile_Birth_Date">Birth Date</string>
    <string name="profile_Birth_Date_hint">dd-mm-yyyy</string>
    <string name="profile_Private_Information">Private Information</string>
    <string name="profile_Email">Email</string>
    <string name="profile_Verifyme">Verifyme</string>
    <string name="profile_Phone_Number">Phone Number</string>
    <string name="profile_Phone_Number_hint">mobile no</string>
    <string name="profile_About_you">About your self</string>
    <string name="profile_Country">Country</string>
    <string name="profile_state">State</string>
    <string name="profile_city">City</string>
    <string name="profile_Where_you_live">Where you live</string>
    <string name="profile_Where_you_live_hint">Enter address</string>
    <string name="profile_Describ_yourself">Describ yourself</string>
    <string name="profile_Describ_yourself_hint">your self</string>
    <string name="profile_Optional">Company Details(Optional)</string>
    <string name="profile_Company_Name">Company Name</string>
    <string name="profile_Company_Name_hint">Enter company name</string>
    <string name="profile_Company_Description">Company Description</string>
    <string name="profile_Company_Description_hint">Enter company description</string>
    <string name="profile_Fax_number">Fax number</string>
    <string name="profile_Fax_number_hint">Enter fax number</string>
    <string name="profile_Url">Url</string>
    <string name="profile_Url_hint">Enter url</string>
    <string name="profile_Time_Zone">Time Zone</string>
    <string name="profile_save">SAVE</string>
    <string name="profile_Language">Language</string>
    <string name="profile_English">English</string>
    <string name="profile_Hindi">Hindi</string>
    <string name="profile_Gujarati">Gujarati</string>
    <string name="profile_French">French</string>
    <string name="profile_spanish">spanish</string>
    <string name="profile_Japenese">japanese</string>
    <string name="profile_Language_you_speak">Language you prefer</string>
    <string name="profile_choose1">Choose Language</string>
    <string name="profile_Language_know">Language you Know</string>
    <string name="profile_Organization_Type">Organization Type</string>
    <string name="profile_Profit_Organization">Profit Organization</string>
    <string name="profile_non_Profit_Organization">Non-Profit Organization</string>
    <string name="WiFi">WiFi</string>
    <string name="Whiteboard">Whiteboard</string>
    <string name="LCD_Projector">LCD/Projector</string>
    <string name="Coffee_Tea">Coffee/Tea</string>
    <string name="Printer">Printer</string>
    <string name="Scanner">Scanner</string>
    <string name="Copy_Machine">Copy Machine</string>
    <string name="Air_Conditioner">Air Conditioner</string>
    <string name="Public_Parking">Public Parking</string>
    <string name="Private_Parking">Private Parking</string>
    <string name="Receptionist">Receptionist</string>
    <string name="seminardetails_saet">seats available</string>
    <string name="seminardetails_address">Seminar Address</string>
    <string name="seminardetails_explore">-> Explore Neighbourhood</string>
    <string name="seminardetails_about">About Seminar</string>
    <string name="seminardetails_read">-> Read More</string>
    <string name="seminardetails_readless">-> Read Less</string>
    <string name="seminardetails_Fromdate">Fromdate</string>
    <string name="seminardetails_todate">Todate</string>
    <string name="seminardetails_fromtime">FromTime</string>
    <string name="seminardetails_totime">ToTime</string>
    <string name="seminardetails_Industry_type">Industry Type</string>
    <string name="seminardetails_facilitie">Facilities</string>
    <string name="seminardetails_Review">Review</string>
    <string name="seminardetails_Review_hint">No Reviews YetStay here and you could give this host their first review!</string>
    <string name="seminardetails_abouthost">About the Host,</string>
    <string name="seminardetails_similarseminar">Similar Seminar</string>
    <string name="seminardetails_book">BOOKING</string>
    <string name="seminardetails_Toast">You are already Book this seminar</string>
    <string name="seminardetails_Toastadmin">You are admin so you not booked seminar</string>
    <string name="seminardetails_attendees">Seminar Attendess</string>
    <string name="booking_toolbar">Booking</string>
    <string name="booking_overview">Overview of Booking</string>
    <string name="booking_seminarname">Seminar Name:</string>
    <string name="booking_username">Host Name:</string>
    <string name="booking_seminartype">Seminar Type:</string>
    <string name="booking_org">Organization Type:</string>
    <string name="booking_booking_date_hint">Choose Your Booking Dates</string>
    <string name="booking_seat">Total Seat</string>
    <string name="booking_seat_hinr">Enter no of seats</string>
    <string name="booking_seat_available">Available</string>
    <string name="booking_personal_info">Personal Information</string>
    <string name="booking_bookingid">Booking Id</string>
    <string name="booking_message">Message</string>
    <string name="booking_message_hint">Enter notes</string>
    <string name="booking_bookbtn">BOOK NOW</string>
    <string name="booking_seat_error">Enter no of seat</string>
    <string name="booking_fromdate_error">Select from date</string>
    <string name="booking_todate_error">Select to date</string>
    <string name="booking_date_error">Select Proper Date</string>
    <string name="booking_booking_req">Please wait while we Book seminar.</string>
    <string name="availableseat">seats</string>
    <string name="your_listing_toolbar">My Listing</string>
    <string name="your_listing_edit">Edit</string>
    <string name="your_listing_delete">Delete</string>
    <string name="your_listing_show">Show</string>
    <string name="your_listing_msg">No Records In your Lisitng!!!</string>
    <string name="your_listing_Delete_Item">Delete Item</string>
    <string name="your_listing_Delete_msg">Sure You Want To Delete This Item!!!</string>
    <string name="your_listing_ok">Ok</string>
    <string name="your_listing_Cancel">Cancel</string>
    <string name="seminar_booklist_toolbar">Seminar Booking List</string>
    <string name="change_Edit_Password">Edit Password</string>
    <string name="change_old_Password">Old Password</string>
    <string name="change_New_Password">New Password</string>
    <string name="change_Confirm_Password">Confirm Password</string>
    <string name="add_submit">SUBMIT</string>
</resources>