<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
<TextView
    android:id="@+id/skip_lng"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:padding="10dp"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textColor="@color/colorwhite"
    android:text="@string/skip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setlang_hint"
            android:textColor="@color/colorwhite"
            android:textSize="16sp" />

            <TextView
                android:id="@+id/rb_english"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000"
                android:text="@string/profile_English" />
            <TextView
                android:id="@+id/rb_japanese"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"
                android:gravity="center"
                android:textColor="#000"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/profile_Japenese" />
        <LinearLayout
            android:id="@+id/ll_setlng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/date_background"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:id="@+id/tv_submited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/add_submit"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>