<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:padding="10dp"
    card_view:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_Edit_Password"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:layout_gravity="left"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C7CACC"
            android:layout_marginTop="3dp"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/change_old_Password"
            android:inputType="textPassword"
            android:textColor="@color/colorblack"
            app:met_singleLineEllipsis="true"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/change_New_Password"
            android:textColor="@color/colorblack"
            app:met_singleLineEllipsis="true"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:inputType="textPassword"
            android:textColor="@color/colorblack"
            android:hint="@string/change_Confirm_Password"
            app:met_singleLineEllipsis="true"
            android:textCursorDrawable="@drawable/text_cursor_cyan"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/your_listing_ok"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/textview_click"
                android:id="@+id/buttonOk"
                android:layout_marginRight="3dp"
                />


            <Button
                android:layout_marginLeft="3dp"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/your_listing_Cancel"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/textview_click"
                android:id="@+id/buttonCancel"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>