<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/meeto_logohome" />
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittextUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:background="@drawable/roundedittext"
                android:hint="@string/rg_fname_hint"/>

            <EditText
                android:id="@+id/edittextlname"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:background="@drawable/roundedittext"
                android:hint="@string/rg_lname_hint"/>
            <EditText
                android:id="@+id/edittextemail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:background="@drawable/roundedittext"
                android:inputType="textEmailAddress"
                android:hint="@string/rg_email_hint"/>
            <EditText
                android:id="@+id/edittextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:inputType="textPassword"
                android:hint="@string/rg_password_hint"
                android:background="@drawable/roundedittext"
                />
            <EditText
                android:id="@+id/edittextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:textColor="@color/colorwhite"
                android:textColorHint="@color/colorwhite"
                android:inputType="textPassword"
                android:hint="@string/rg_conf_p_hint"
                android:background="@drawable/roundedittext"
                />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:background="@drawable/roundedittext"
                android:text="@string/register"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textColor="#fff"/>


            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/rg_already"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>