<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@drawable/meeto_logohome"
            />

        <EditText
            android:id="@+id/edt_emailOrMobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorwhite"
            android:textColorHint="@color/colorwhite"
            android:background="@drawable/roundedittext"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:singleLine="true" />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:textColor="@color/colorwhite"
            android:textColorHint="@color/colorwhite"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedittext"
            android:padding="10dp"

            android:singleLine="true" />
        <TextView
            android:id="@+id/Forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="right"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedittext"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/colorwhite"
            android:textSize="20sp" />


    </LinearLayout>


</LinearLayout>