<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:padding="10dp"
    card_view:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_choose1"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_gravity="left"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C7CACC"
            android:layout_marginTop="5dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/profile_English"
                android:textColor="#fff"
                android:textSize="20sp"
                android:background="@drawable/textview_click"
                android:id="@+id/btn_eng"
                android:layout_marginRight="3dp"
                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/profile_Japenese"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textview_click"
                android:id="@+id/btn_jp"
                />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>