<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/meeto_logohome" />

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/logo"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll_login_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_LoginHome"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/roundhomeedittext"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


            <Button
                android:id="@+id/btn_Registration"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundhomeedittext"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="3dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="@color/colorwhite"
                android:text="@string/skip"/>


            <TextView
                android:id="@+id/tv_setlang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textColor="@color/colorwhite"
                android:text="@string/setlang"/>
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
